# aivatar

./: CMakeLists.txt  game_objects.cpp  game_objects.h  main.cpp
include/: army.cpp  army.h  board.cpp  board.h  enums.h  map.cpp  map.h  region_declaration.cpp
